<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_torrent"
        android:icon="@drawable/ic_add"
        android:title="@string/add_torrent_by_file"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_link_torrent"
        android:icon="@drawable/ic_link"
        android:title="@string/add_torrent_by_link"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/start_all_items"
        android:orderInCategory="1"
        android:title="@string/start_all_items"
        app:showAsAction="never" />

    <item
        android:id="@+id/pause_all_items"
        android:orderInCategory="2"
        android:title="@string/pause_all_items"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_all_completed_items"
        android:orderInCategory="3"
        android:title="@string/clear_all_completed_items"
        app:showAsAction="never" />

    <group android:id="@+id/group">
        <item
            android:id="@+id/settings"
            android:orderInCategory="4"
            android:title="@string/preferences"
            app:showAsAction="ifRoom" />
    </group>
</menu>